--- a/trace/app/requirements.txt
+++ b/trace/app/requirements.txt
@@ -1,6 +1,7 @@
 google-cloud-monitoring==0.36.0
 google-cloud-trace==0.24.0
 opencensus==0.7.10
+Jinja2==3.0.3
 Flask==1.1.2
 opencensus-ext-stackdriver==0.7.3
 opencensus-ext-flask==0.7.3
